	PR c++/28016 	* decl.c (cp_finsh_decl): Do not emit uninstantiated static data 	members. 	PR c++/28016 	* g++.dg/template/static26.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@114739 138bc75d-0d04-0410-961f-82ee72b054a4